# kuper

./: .gitignore  README.md  config.example.yaml  kuper-cli.py  kuper.py  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
src/kuper/: __init__.py  gitlab_activity.py
templates/: commit_template.html  template.html
tests/e2e/: test_kuper_e2e.py
tests/unit/: test_kuper_unit.py
