[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kuper"
version = "0.0.1"
description = "GitLab commit activity collector and report generator"
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "mypy>=1.8",
    "black>=24",
    "isort>=5",
    "pylint>=3",
    "lxml>=6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end tests for kuper CLI against mocked GitLab API",
]


[tool.coverage.run]
branch = true
source = ["kuper"]

[tool.coverage.report]
precision  = 2
skip_empty = true
fail_under = 33.00
exclude_also = []

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]
cobertura_xml_report = "reports/mypy/"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pylint.basic]
recursive = true
fail-under = 8
reports = true
output-format = "parseable"
disable = ["C0116", "C0115", "C0114", "E0401"]

[tool.isort]
skip_gitignore = true
profile = "black"